welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:1: error: not found: value Direction
setDirection(Direction.EAST)
             ^DwarfCode:7: error: not found: value Direction
  setDirection(Direction.WEST)
               ^DwarfCode:13: error: not found: value Direction
  setDirection(Direction.EAST)
               ^