welcome.lessons.welcome.summative.Moria.scala.code
setDirection(Direction.EAST)
while (!estFaceMur()) {
  while (!estSurBiscuit()) {
    avance()
  }
  prendBiscuit()
  setDirection(Direction.WEST)
  while (!estSurBiscuit()) {
    avance()
  }
  recule()
  poseBiscuit()
  setDirection(Direction.EAST)
}
droite()
avance()
gauche()
avance()